# hydra-queue-runner

./: .gitignore  Cargo.toml  README.md  TODO  builder-module.nix  client.key  clippy.toml  darwin-builder-module.nix  default.nix  example-secret-key  flake.nix  fod_migration.sql  linux-builder-module.nix  runner-module.nix  start_and_build.sh  treefmt.nix
.github/workflows/: rust.yml
.sqlx/: query-09a1eff17c442f18381a3e919333cff1bfa4f657e08b96fe4821da9df90fec88.json  query-14f8f9fcbf3d3f6bb0c6b03d853c2deab7eb57ae5f28a682c4ab01978ae56ce4.json  query-52df16acda3b0fa0e842d2277c187d7ffc98594b387365e5b5275db1f0b9371f.json  query-591a44711a77c8985bc8046dadd29eae2d15b8c324d0f86207fc27774e4dedd0.json  query-7c0b5fdec67a7f35b56ca0f562c970346e88e3197f7864b5b99fe7313c3d5bbe.json  query-8588d8388354fb4a0cff3cc09530781abf71ba6ff9474dc9eb615e9839468e78.json  query-97d9c593c10496dd4e4e89d6444a4d56e50fea241a7f8045bc9b494220d45895.json  query-9e226a6d733fa211323ca30a9e22f75acc4aeb141f71bd0d65fda00a1e00f9e3.json  query-a97e3894b3e72c4581e5ed167ed37cddfd19738a3ca0dc2eb17016c896f46717.json  query-bf20dca14bbf2ec7c690adb9dddecc9896e58f974a6f8e41028116e8dba34041.json  query-c0e6284bda93aa884165a611d571fec4eaae74de44ddd162d273724ea99894b4.json  query-ce883e49e0c6bbaadacd4fe92dc7245f32016a76500aaabc999f4f19b7c146c5.json  query-dcdb83d04577a2494916153ff66081f05efcbc9355e2e62c00e2ab8b7d2a95db.json  query-e92b1033161376285fcd9257b010996d6fc3ae181ade39b64d3801964a97ce70.json
builder/: Cargo.toml  build.rs
builder/examples/: rebuild_fod.rs
builder/src/: config.rs  grpc.rs  lib.rs  main.rs  state.rs  system.rs  utils.rs
crates/binary-cache/: Cargo.toml
crates/binary-cache/examples/: download_file.rs  upload_file.rs  upload_logs.rs  upload_realisation.rs
crates/binary-cache/src/: cfg.rs  compression.rs  debug_info.rs  lib.rs  narinfo.rs  presigned.rs  streaming_hash.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  lib.rs  models.rs
crates/nix-utils/: Cargo.toml  build.rs
crates/nix-utils/examples/: copy_path.rs  drv_parse.rs  import_file.rs  is_valid_path.rs  list_nar.rs  path_infos.rs  query_requisites.rs  realisation_query.rs  upsert_file.rs
crates/nix-utils/include/: nix.h  realisation.h
crates/nix-utils/src/: config.rs  drv.rs  hash.rs  lib.rs  nar.rs  nix.cpp  nix_support.rs  pathinfo.rs  realisation.rs  realise.rs  remote.rs  store_path.rs
crates/nix-utils/src/cxx/: realisation.cpp
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs  propagate.rs
proto/v1/: streaming.proto
queue-runner/: Cargo.toml  build.rs
queue-runner/examples/: collect-fods.rs
queue-runner/src/: config.rs  lib.rs  lock_file.rs  main.rs  tracing.rs  utils.rs
queue-runner/src/db/: connection.rs  mod.rs  models.rs
queue-runner/src/io/: build.rs  jobset.rs  machine.rs  mod.rs  queue_runner.rs  response_types.rs  stats.rs
queue-runner/src/server/: grpc.rs  http.rs  mod.rs
queue-runner/src/server/io/: mod.rs
queue-runner/src/state/: atomic.rs  build.rs  fod_checker.rs  inspectable_channel.rs  jobset.rs  machine.rs  metrics.rs  mod.rs  queue.rs  step.rs  step_info.rs  uploader.rs
tests/: hydra_postgresql.nix  t00-simple.nix  t01-mtls.nix  t02-mtls-nginx.nix
tests/certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
