[workspace]

resolver = "2"
members = ["builder", "queue-runner", "crates/*"]

[workspace.package]
rust-version = "1.88.0"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.98"
arc-swap = "1.7"
async-stream = "0.3"
atomic_float = "1.1.0"
backon = "1.5.2"
byte-unit = "5.1.6"
bytes = "1"
chrono = { version = "0.4.38", default-features = false }
clap = "4"
cxx = "1"
cxx-build = "1"
futures = "0.3"
futures-util = "0.3"
gethostname = "1"
h2 = "0.4"
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.10"
listenfd = "1"
lockfile = "0.4.0"
log = "0.4"
nix = { version = "0.30", default-features = false }
nix-diff = { git = "https://github.com/mic92/nix-diff-rs.git", rev = "6c0902f9c6f756b09095e9d77b424332ff0e32e9" }
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12.4"
pkg-config = "0.3"
procfs = "0.18"
procfs-core = "0.18"
prometheus = { version = "0.14.0", default-features = false }
prost = "0.14"
regex = "1"
sd-notify = "0.4.5"
secrecy = "0.10"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sqlx = "0.8"
sysinfo = "0.37.0"
thiserror = "2.0"
tikv-jemallocator = "0.6"
tokio = { version = "1.34", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.9.0"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.18"
url = "2.5.4"
uuid = "1.16"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
