[package]
name = "queue-runner"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tracing-log = "0.2.0"

sd-notify = "0.4.5"
toml = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = { version = "0.10.3", features = ["serde"] }
ahash = "0.8.11"
arc-swap = "1.7.1"
parking_lot = "0.12.4"

thiserror = "2.0"
anyhow = "1.0.98"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
atomic_float = "1.1.0"
multimap = "0.10.1"

tokio = { version = "1.34", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time",
  "signal",
  "sync",
  "fs",
  "tracing",
] }
futures = "0.3"
futures-util = "0.3"
byte-unit = "5.1.6"

tokio-stream = "0.1"
prost = "0.13"
tonic = { version = "0.13", features = ["zstd", "tls-ring"] }
async-stream = "0.3"
h2 = "0.4"

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = "0.1.10"
bytes = "1"
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "std",
  "serde",
] }
prometheus = "0.14.0"
procfs = "0.17"

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
] }

nix-utils = { path = "../crates/nix-utils" }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
