[package]
name = "db"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
ahash.workspace = true

serde_json.workspace = true
chrono = { workspace = true, features = [
  "clock",
  "std",
  "serde",
] }

sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
] }
