[package]
name = "nix-utils"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
log = "0.4"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.34", features = ["process"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7"
ahash = { version = "0.8.11", features = ["serde"] }
