[package]
name = "nix-utils"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
log = "0.4"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.34", features = ["process", "fs"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
futures = "0.3"
ahash = { version = "0.8.11", features = ["serde"] }
parking_lot = "0.12.4"
cached = { version = "0.56", features = ["async", "async_tokio_rt_multi_thread"] }
regex = "1"
sha2 = "0.10"

cxx = "1"
bytes = "1.10.1"

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"
